--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(Hello
 set(CMAKE_C_FLAGS "-Wall -Wextra -pedantic -std=c99")
 set(CMAKE_C_FLAGS_DEBUG "-Werror -g -O0")
 set(CMAKE_C_FLAGS_RELEASE "-DNDEBUG -O2")
+set(CMAKE_C_FLAGS_PROFILING "${CMAKE_C_FLAGS_DEBUG} --coverage")
 
 if(NOT CMAKE_BUILD_TYPE)
   message("No build type specified - defaulting to Debug.")
